src/objects/VIP_Event_SF_ENTRY__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>CTIA_Device_Giveaway</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CTIA_Device_Giveaway</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>VIP Event SF ENTRY</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>VIP Event SF ENTRY</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VIP Event SF ENTRYs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>